# nexusvault

./: .gitignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  lint.txt  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_fts.sql  003_embeddings.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: document.rs  mod.rs  secrets.rs  vault.rs
src/components/: CommandPalette.tsx  ErrorBoundary.tsx  QuickSwitcher.tsx
src/components/ai/: VaultChat.tsx
src/components/editor/: Editor.tsx  EditorToolbar.tsx  InlineToolbar.tsx
src/components/graph/: GraphView.tsx
src/components/layout/: AppLayout.tsx  StatusBar.tsx  TabBar.tsx
src/components/panels/: BacklinksPanel.tsx
src/hooks/: useAutoUpdate.ts  useDocument.ts  useGraphData.ts  useKeyboardShortcuts.ts  useSearch.ts  useSync.ts  useVaultInit.ts
src/lib/: sync-engine.ts
src/stores/: editor.ts  settings.ts  sync.ts  vault.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: index.ts  tauri-plugins.d.ts
workers/: package-lock.json  package.json  wrangler.toml
workers/src/: index.ts
(+33 files in other folders)
