[package]
name = "nexusvault"
version = "0.1.0"
description = "Local-first knowledge base with CRDT sync and native AI"
authors = ["NexusVault Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "nexusvault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
